--- a/src/config/config.json
+++ b/src/config/config.json
@@ -6,6 +6,8 @@
     "trailing_slash": false,
     "favicon": "/images/favicon.png",
     "logo": "/images/logo.png",
+    "logoacerca":"/images/logoacerca.png",
+    "logoacerca2":"/images/logoacerca2.png",
     "logo_darkmode": "/images/logo-darkmode.png",
     "logo_width": "150",
     "logo_height": "30",
